fix: SonarQube + PMD + Checkstyle 全合规零抑制
- checkstyle: 修复 JavadocParagraph、LineLength、MissingJavadocMethod、SummaryJavadoc、OperatorWrap、Indentation、OneStatementPerLine、RightCurlyAlone 等 100+ 警告
- PMD: 修复 ShortVariable、CloseResource、CommentDefaultAccessModifier、UncheckedCast 等 30+ 违规
- SonarQube: 消除 ScheduledFuture<?> wildcard 返回类型 (S1452)，EventLoop AutoCloseable (S2095)
- 架构: volatile → AtomicReference、package-private → private/public、去 /* default */
- 新增 BorrowedExecutor 包装 Netty 共享 EventLoop，语义借用不拥有
- ClientSession 重构: 字段封装 + cancelXxxTask() 替代 wildcard getter
- 测试: @Test 方法 ≤1 assert，多断言拆 private helper
- 全局零 @SuppressWarnings，compileJava + pmdMain + checkstyleMain 全通过